# actions-to-mcp

./: .gitignore  README.md  llms.txt
.claude/skills/convert-action-pack/: SKILL.md
docs/: 01-decide.md  02-mental-model.md  03-framework-and-setup.md  04-migration-workflow.md  05-sema4-patterns.md  06-tools-and-testing.md  08-observability.md  09-faq.md
docs/07-orchestration/: README.md  azure-container-apps.md  bedrock-agentcore.md  cloud-run.md  gallery-pattern.md
examples/worked-migration/: README.md
examples/worked-migration/legacy-snapshot/: README.md
examples/worked-migration/microsoft-sharepoint-mcp/: agent_server_context.py  agent_server_helper.py  models.py  pyproject.toml  server.py  sharepoint_client.py
examples/worked-migration/microsoft-sharepoint-mcp/tests/: conftest.py  test_context.py  test_smoke.py  test_tools.py
