[project]
name = "mcp-microsoft-sharepoint"
version = "0.1.0"
description = "Microsoft SharePoint MCP server — migrated from the Sema4.ai SharePoint action pack."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3",
    "pydantic>=2",
    "httpx",
    "sema4ai-api-client",
]

[dependency-groups]
test = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
